--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -21,5 +21,8 @@ jobs:
           python-version: 3.x
           cache: "pip"
 
+      - name: Install dependencies
+        run: pip install mkdocs-material
+
       - name: Deploy to GitHub Pages
         run: mkdocs gh-deploy --force
