--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,12 @@
 site_name: Hanxun Wu
 theme:
   name: material
+
+extra:
+  alternate:
+    - name: 中文
+      link: /zh/
+      lang: zh
+    - name: English
+      link: /en/ 
+      lang: en
