[CI]: 👷Make sure to use the latest mkdocs-material

--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -23,7 +23,7 @@ jobs:
           cache: "pip"
 
       - name: Install dependencies
-        run: pip install mkdocs-material
+        run: pip install --upgrade -r requirements.txt
 
       - name: Deploy to GitHub Pages
         run: mkdocs build
