[Fix]: 🐛Add nav option

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,11 @@ plugins:
           link: /zh/
           lang: zh
           site_name: 吴函迅食用指南
+          nav:
+            - Home: index.md
         - name: English
           link: /en/
           lang: en
           site_name: Hanxun Wu's Website
+          nav:
+            - Home: index.md
