--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,11 +35,11 @@ plugins:
           site_name: 吴函迅食用指南
           nav:
             - 我:
-              - me: index.md
+              - me/index.md
         - name: English
           link: /en/
           lang: en
           site_name: Hanxun Wu's Website
           nav:
             - Me:
-              - me: index.md
+              - me/index.md
