[Fix]: 🐛Separate the information with errors from the basic_information.md section into a separate part.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,9 @@ plugins:
                 - me/index.md
                 - me/personal_information.md
                 - me/basic_information.md
+                - me/educational_background.md
+                - me/contact_information.md
+                - me/other_information.md
         - name: English
           link: /en/
           lang: en
@@ -63,3 +66,6 @@ plugins:
                 - me/index.md
                 - me/personal_information.md
                 - me/basic_information.md
+                - me/educational_background.md
+                - me/contact_information.md
+                - me/other_information.md
